[project]
name = "grouvee_export"
version = "0.1.1"
description = "a partial grouvee exporter"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["PyYAML", "click>=7.0", "logzero", "selenium>=4.10.0"]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
grouvee_export = "grouvee_export.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/grouvee_export"

[project.optional-dependencies]
testing = ["mypy", "pytest"]

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.setuptools]
script-files = ["bin/grouvee_notmuch"]

[tool.setuptools.packages.find]
include = ["grouvee_export"]
