[metadata]
name = grouvee_export
version = 0.1.1
description = a partial grouvee exporter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/purarue/grouvee_export
author = purarue
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    PyYAML
    click>=7.0
    logzero
    selenium>=4.10.0
python_requires = >=3.9
include_package_data = True

[options.packages.find]
include =
    grouvee_export

[options.entry_points]
console_scripts =
    grouvee_export = grouvee_export.__main__:main

[options.extras_require]
testing =
    mypy
    pytest

[options.package_data]
grouvee_export = py.typed

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
